fix: Fix z-index on Section.Navbar

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -19,6 +19,17 @@
 
   /* Other */
   --duration-transitions: 100ms;
+
+  /* z-index */
+  --z-below: -1;
+  --z-base: 0;
+  --z-raised: 10;
+  --z-dropdown: 100;
+  --z-sticky: 200;
+  --z-overlay: 300;
+  --z-modal: 400;
+  --z-toast: 500;
+  --z-tooltip: 600;
 }
 
 /* Light mode defaults */
