--- a/src/components/ui/Section/Section.module.css
+++ b/src/components/ui/Section/Section.module.css
@@ -2,6 +2,7 @@
   position: sticky;
   top: 0;
   left: 0;
+  z-index: var(--z-sticky);
   box-sizing: content-box;
   display: flex;
   flex-direction: row;
