--- a/src/entrypoints/popup/style.css
+++ b/src/entrypoints/popup/style.css
@@ -1,4 +1,5 @@
 #root {
+  z-index: var(--z-base);
   width: 350px;
   height: 500px;
   margin: 0;
